// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots - products title StyledCapitalizedText 1`] = `
<DocumentFragment>
  .c0 {
  text-transform: capitalize;
}

<span
    class="c0"
  >
    Test
  </span>
</DocumentFragment>
`;

exports[`Snapshots - products title StyledCount 1`] = `
<DocumentFragment>
  .c0 {
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  color: #515151;
  display: inline-block;
}

@media (min-width:1024px) {
  .c0 {
    display: none;
  }
}

<span
    class="c0"
  >
    Test
  </span>
</DocumentFragment>
`;

exports[`Snapshots - products title StyledProductTitle 1`] = `
<DocumentFragment>
  .c0 {
  padding: 0 1rem 0 1rem;
  -webkit-box-flex: 3;
  -webkit-flex-grow: 3;
  -ms-flex-positive: 3;
  flex-grow: 3;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c0 h1 {
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  color: #000000;
  font-size: 1rem;
  -webkit-letter-spacing: 0.12px;
  -moz-letter-spacing: 0.12px;
  -ms-letter-spacing: 0.12px;
  letter-spacing: 0.12px;
  line-height: 1.5;
  font-weight: 500;
  margin: auto;
}

@media (max-width:1279px) {
  .c0 {
    -webkit-box-flex: 2;
    -webkit-flex-grow: 2;
    -ms-flex-positive: 2;
    flex-grow: 2;
  }
}

@media (max-width:767px) {
  .c0 {
    padding: 0 1rem 0 1rem;
    max-width: 100vw;
  }
}

@media (min-width:1024px) {
  .c0 h1 {
    margin: 0.375rem 0 0rem 0;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Snapshots - products title StyledSecondaryText 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 0.875rem;
  line-height: 1.3125rem;
  -webkit-letter-spacing: 0.0075rem;
  -moz-letter-spacing: 0.0075rem;
  -ms-letter-spacing: 0.0075rem;
  letter-spacing: 0.0075rem;
}

<p
    class="MuiTypography-root c0 MuiTypography-body1"
  >
    Test
  </p>
</DocumentFragment>
`;

exports[`Snapshots - products title StyledTextWrapper 1`] = `
<DocumentFragment>
  .c0 {
  display: block;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: capitalize;
}

.c0 h1 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: capitalize;
}

@media (min-width:400px) {
  .c0 {
    max-width: 25rem;
  }
}

<span
    class="c0"
  >
    Test
  </span>
</DocumentFragment>
`;
